a11/docker-kubernetes-python-demo/k8s/keycloak/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    pod-security.kubernetes.io/enforce: baseline
